# aula17_bootcamp_python

./: README.md  desafio.db  desafio.py  desafio_query.py  exemplo_01.py  meubanco.db  pyproject.toml
