[tool.poetry]
name = "aula17-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Rebeca <rebecavitoriarangel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
